my first modification

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ img {
                     "Friendship is born at that moment when one person says to another, 'What! You too? I thought I was the only one.'" - C.S. Lewis</strong></b></p>
                 <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid
                         Padding</button></p>
+                        <p>welcome </p>
             </header></div>
               
 <ui>
